iterate filter item based on mock response

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -48,7 +48,10 @@
 	font-weight: bold;
 }
 
-.menuGroup a:hover, .sheet ul li:hover {
+.menuGroup a.active,
+.menuGroup a:hover,
+.sheet ul li:hover,
+.sheet ul li.active {
 	color: var(--orange);
 }
 
