add font family

--- a/src/styles/Article.module.css
+++ b/src/styles/Article.module.css
@@ -29,6 +29,10 @@
 	border-bottom: 1px solid var(--dark);
 }
 
+.header h4, .content {
+	font-family: 'Labrada', serif;
+}
+
 .content {
 	font-size: 20px;
 	white-space: pre-line;
