--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -9,7 +9,15 @@
 
 .card img {
 	width: 450px;
+	height: 300px;
 	border-radius: 10px;
+	object-fit: cover;
+}
+
+@media (max-width: 480px) {
+	.card img {
+		width: 350px;
+	}
 }
 
 .card.footer img {
@@ -19,6 +27,11 @@
 .card h4 {
 	max-width: 350px;
 	text-align: center;
+	overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .author {
