--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,3 +8,9 @@
   border: 2px solid var(--dark);
   background-color: transparent;
 }
+
+.buttonMore:hover,
+.buttonMore:active {
+	background-color: var(--dark);
+	color: var(--white);
+}
