add fade in transition image

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -12,11 +12,25 @@
 	height: 300px;
 	border-radius: 10px;
 	object-fit: cover;
+	opacity: 0;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  -o-transition: all 2s ease;
+}
+
+.card img:hover {
+	width: 500px;
+	height: 350px;
 }
 
 @media (max-width: 480px) {
 	.card img {
 		width: 350px;
+	}
+
+	.card img:hover {
+		width: 375px;
 	}
 }
 
